--- a/5.11作业/5.11作业.html
+++ b/5.11作业/5.11作业.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="5.11style.css">
 </head>
 <body>
-    <div class="layout">
-        <a href="" class="h-button  steal"> steal</a>
-        <a href="" class="h-button  yellow"> yellow</a>
-        <a href="" class="h-button  orange"> orange</a>
-        <a href="" class="h-button  red"> red</a>
-        <a href="" class="h-button  green"> green</a>
+    <div class="zuoye">
+        <a href="" class="button  steal"> steal</a>
+        <a href="" class="button  yellow"> yellow</a>
+        <a href="" class="button  orange"> orange</a>
+        <a href="" class="button  red"> red</a>
+        <a href="" class="button  green"> green</a>
     </div>
 
 </body>
