--- a/5.11作业/静态页面挑战.html
+++ b/5.11作业/静态页面挑战.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>我的项目</title>
-  <link rel="stylesheet" href="css/defy.css">
+  <link rel="stylesheet" href="defy.css">
 </head>
 <body>
 <div id="header" class="layout">
